--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Secure Real-Time Multiplayer Game</title>
-    <meta
-      name="description"
-      content="An example for the fCC InfoSec Secure Real-Time Multiplayer Game project"
-    />
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../public/style.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <script src="/socket.io/socket.io.js"></script>
-  </head>
-  <body>
-    <header>
-      <h1>Secure Real Time Multiplayer Game</h1>
-    </header>
-    <hr style="margin: 25px" />
-    <div class="container">
-      <canvas 
-        ref="game"
-        id="game-window" 
-        width="640" 
-        height="480"
-      >
-      </canvas>
-    </div>
-  </body>
-  <script src="../public/game.mjs" type="module"></script>
+
+<head>
+  <title>Secure Real-Time Multiplayer Game</title>
+  <meta name="description" content="An example for the fCC InfoSec Secure Real-Time Multiplayer Game project" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="../public/style.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Elsie:wght@400;900&family=Press+Start+2P&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <header id="navabr">
+    <h1 id="title">Secure Real Time Multiplayer Game</h1>
+  </header>
+  <div class="container">
+    <canvas ref="game" id="game-window" width="640" height="480">
+    </canvas>
+  </div>
+</body>
+<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+<script src="../public/game.mjs" type="module"></script>
+
 </html>
