--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
     </canvas>
   </div>
 </body>
-<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+<script src="/public/socket.io/socket.io.js"></script>
 <script src="../public/game.mjs" type="module"></script>
 
-</html>
+</html> 
